SOAP and REST endpoints for book series
